Added more git commands

--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -1664,9 +1664,24 @@
     "git status\n",
     "```\n",
     "\n",
+    "-add all files\n",
+    "```bash\n",
+    "git add .\n",
+    "```\n",
+    "\n",
     "**Committing a change**\n",
     "```bash\n",
     "git commit -m \"your comments\" filename\n",
+    "```\n",
+    "\n",
+    "**Uploading changes to github**\n",
+    "```bash\n",
+    "git push\n",
+    "```\n",
+    "\n",
+    "**Seeing log of changes**\n",
+    "```bash\n",
+    "git log\n",
     "```"
    ]
   },
