--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -1682,8 +1682,60 @@
     "**Seeing log of changes**\n",
     "```bash\n",
     "git log\n",
+    "```\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Let's add and remove a temporary file as a test:\n",
+    "\n",
+    "- Create a file and commit\n",
+    "\n",
+    "```bash\n",
+    "echo '' > tmpfile\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "git commit -m \"Created a tmpfile\" tmpfile\n",
+    "```\n",
+    "\n",
+    "- Delete the file and commit\n",
+    "\n",
+    "```bash\n",
+    "rm tmpfile\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "git commit -m \"Deleted the tmpfile\" tmpfile\n",
+    "```\n",
+    "\n",
+    "- Check the log\n",
+    "\n",
+    "```bash\n",
+    "git log\n",
+    "```\n",
+    "\n",
+    "- Checks just the most recent log item\n",
+    "\n",
+    "```bash\n",
+    "git log -1\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
