Final lecture 3 changes

--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -1702,6 +1702,7 @@
     "```\n",
     "\n",
     "```bash\n",
+    "git add tempfile\n",
     "git commit -m \"Created a tmpfile\" tmpfile\n",
     "```\n",
     "\n",
@@ -1727,24 +1728,6 @@
     "git log -1\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
