--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Lecture 1\n",
+    "# Lecture 1 — Setting up\n",
     "### January 9, 2017 (Morning)\n",
     "\n",
     "### Before we start:\n",
@@ -247,7 +247,7 @@
     "collapsed": true
    },
    "source": [
-    "# Lecture 2\n",
+    "# Lecture 2 — Introduction to UNIX commands\n",
     "### January 9, 2017 (Afternoon)\n",
     "\n",
     "- Continuing with bash / unix commands\n",
@@ -1559,7 +1559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 3\n",
+    "# Lecture 3 — Introduction to Git\n",
     "### January 10, 2017 (Morning)\n",
     "\n",
     "### Todo list—\n",
@@ -1728,6 +1728,65 @@
     "git log -1\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lecture 4  — Introduction to Python\n",
+    "### January 11, 2017 (Morning)\n",
+    "\n",
+    "### Todo list—\n",
+    "1. Clone Dario's Repository\n",
+    "2. Command aliases\n",
+    "3. Introduction to Python!\n",
+    "\n",
+    "## 1. Cloning Repositories\n",
+    "\n",
+    "```bash\n",
+    "git clone http://www.github.com/darioflute/CS4A.git\n",
+    "```\n",
+    "\n",
+    "- now cd into the folder\n",
+    "```bash\n",
+    "cd CS4A\n",
+    "```\n",
+    "\n",
+    "- now try to update the repository\n",
+    "- it should say \"up to date\"\n",
+    "```bash\n",
+    "git pull origin master\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Command aliases\n",
+    "\n",
+    "```bash\n",
+    "cd ~\n",
+    "vim bash.rc\n",
+    "```\n",
+    "\n",
+    "- add the line\n",
+    "\n",
+    "```bash\n",
+    "alias jn = \"jupyter notebook\"\n",
+    "```\n",
+    "\n",
+    "## 2. Introduction to Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
