End of Lecture 4, import Darios notes about lists

--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -1776,7 +1776,511 @@
     "alias jn = \"jupyter notebook\"\n",
     "```\n",
     "\n",
-    "## 2. Introduction to Python"
+    "## 3. Introduction to Python\n",
+    "\n",
+    "- This will create a basic python script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting hello-world.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile hello-world.py\n",
+    "#!/usr/bin/env python\n",
+    "print (\"Hello world!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- now let's make it executable\n",
+    "```bash\n",
+    "!chmod +x hello-world.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Writing using other character sets\n",
+    "\n",
+    "```python\n",
+    "writefile hello-world-in-german.py\n",
+    "#!/usr/bin/env python\n",
+    "# -*- coding: UTF-8 -*-\n",
+    "\n",
+    "print(\" Meine Völker !\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Packages\n",
+    "\n",
+    "- Allows you to import other commands\n",
+    "- The math package has mathematical functions for example\n",
+    "\n",
+    "```python\n",
+    "import math\n",
+    "x = math.cos( 2 * math.pi )\n",
+    "```\n",
+    "\n",
+    "**OR** for easier reading\n",
+    "\n",
+    "```python\n",
+    "from math import cos,pi\n",
+    "x = cos( 2 * pi )\n",
+    "print(x)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examening Packages\n",
+    "\n",
+    "```python\n",
+    "import math\n",
+    "print(dir(math))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__doc__', '__file__', '__name__', '__package__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'hypot', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'modf', 'pi', 'pow', 'radians', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'trunc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(dir(math))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function log in module math:\n",
+      "\n",
+      "log(...)\n",
+      "    log(x[, base])\n",
+      "    \n",
+      "    Return the logarithm of x to the given base.\n",
+      "    If the base not specified, returns the natural logarithm (base e) of x.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "help(math.log)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Some useful pagkages include os, sys, math, and more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables\n",
+    "\n",
+    "```python\n",
+    "x = 10.\n",
+    "print (x)\n",
+    "print ( type(x) )\n",
+    "```\n",
+    "\n",
+    "- adding a '.' at the end defines it as a float:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "<type 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10.\n",
+    "print (x)\n",
+    "print ( type(x) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Variable types\n",
+    "\n",
+    "example | type\n",
+    "--- | ---\n",
+    "10. | float\n",
+    "True | bool\n",
+    "10 - 10j | complex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's check if a type is what we want\n",
+    "x = 1.0\n",
+    "type(x) is float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can even save the type as a bool\n",
+    "x = 1.0\n",
+    "typex = type(x) is float\n",
+    "print typex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# there is also a function for this\n",
+    "isinstance(x, float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Type Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "10\n",
+      "['H', 'e', 'l', 'l', 'o', ' ', 'W', 'o', 'r', 'l', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10.\n",
+    "print (x)\n",
+    "x = int(x)\n",
+    "print (x)\n",
+    "print( list(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Operations\n",
+    "\n",
+    "- to the power  \\*\\*\n",
+    "- division /\n",
+    "- integer division //\n",
+    "- or, and, not, >, <, >=, <=, =="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (True or False)\n",
+    "print (True and False)\n",
+    "print (not True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- arrays\n",
+    "\n",
+    "```python\n",
+    "list1 = [1,2,3,4]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings\n",
+    "\n",
+    "- just text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "<type 'str'>\n",
+      "Hello Friends\n",
+      "13\n",
+      "o\n",
+      "Hello\n",
+      "Hello\n",
+      " World\n",
+      "Hello World\n",
+      "HloWrd\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Hello World\"\n",
+    "print(s)\n",
+    "print( type(s) )\n",
+    "len(s)                                     #length\n",
+    "s2 = s.replace(\"World\" , \"Friends\")        #replaces strings\n",
+    "print(s2)\n",
+    "print(len(s2))\n",
+    "print(s2[4])                               # counting starts at 0\n",
+    "print(s[0:5])                              # print characters 0-4\n",
+    "print(s[:5])                               # same as above\n",
+    "print(s[5:])                               # 5th till the end\n",
+    "#print(s(5:-1))                             # 5th to second to last\n",
+    "print(s[:])                                # : is all chars\n",
+    "print(s[::2])                              # prints in steps of 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **string formatting**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a list\n",
+    "l = [1,2,3,4]\n",
+    "type(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print certain elements\n",
+    "print (l[2])\n",
+    "print (l[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**note: a list is not an array**\n",
+    "- you can put different types of things in there\n",
+    "- you can also nest lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# look at all the different types inside!\n",
+    "l2 = [1, 2j, \"Hello\", True]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Range**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[4, 5, 6]\n",
+      "[0, 4, 8, 12, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( range(5) )\n",
+    "print( range(4,7) )\n",
+    "print( range(0,20, 4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More list operations\n",
+    "\n",
+    "***Import from Dario's notes***"
    ]
   },
   {
