End of lecture 5

--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3314,6 +3314,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#3D plotting documents\n",
+    "from mpl_toolkits.mplot3d.axes3d import Axes3D"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
