Linked Dario's plotting tutorial

--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3208,6 +3208,9 @@
    "source": [
     "## 9. Plotting\n",
     "\n",
+    "**See this guide for Dario's full tutorial on plotting with mathplotlib:            \n",
+    "https://github.com/darioflute/CS4A/blob/master/Lecture-plotting.ipynb**\n",
+    "\n",
     "- type the following line at the beginning\n",
     "- this is so that plots will show up inside Jupyter, I don't think you need it in your code\n",
     "\n",
@@ -3322,6 +3325,143 @@
    "source": [
     "#3D plotting documents\n",
     "from mpl_toolkits.mplot3d.axes3d import Axes3D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Lecture 6 — Widgets\n",
+    "\n",
+    "Todo\n",
+    "1. Install wxpython\n",
+    "2. Our first application: \"Hello, World\"\n",
+    "3. A simple text editor\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 1. Install wxpython\n",
+    "\n",
+    "**This is quite confusing, and if you are curious to read more about this wxpython widget package check out the official documentation at https://wiki.wxpython.org/Getting%20Started**\n",
+    "\n",
+    "- To make a graphical interface to use a code in an interactive way we need a library of widgets, called wxpython.  We will explore the usage of this library mainly with examples.  But to start we have to install it with conda.\n",
+    "\n",
+    "- run the following command:\n",
+    "\n",
+    "```bash\n",
+    "conda install wxpython\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Our first application\n",
+    "\n",
+    "A traditional \"Hello, World\" application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting framecode.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile framecode.py\n",
+    "#!/usr/bin/env pythonw                            #!/usr/bin/env python on linux\n",
+    "import wx\n",
+    "\n",
+    "app = wx.App(False)                               #create a new app, don't redirect stdout/stderr to\n",
+    "frame = wx.Frame(None, wx.ID_ANY, \"Hello World\")  # A frame is the top-level\n",
+    "frame.Show(True)                                  #Show the frame\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw framecode.py                             #!python framecode.py on linux"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. wx.TextCtrl widget  — A simple text editor\n",
+    "\n",
+    "This little app will let you type some text into a box.  Cool!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing editor.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile editor.py\n",
+    "#!/usr/bin/env pythonw\n",
+    "import wx\n",
+    "class MyFrame(wx.Frame):\n",
+    "        \"\"\"We simply derive a new class of frame\"\"\"\n",
+    "        def __init__(self, parent, title):\n",
+    "            wx.Frame.__init__(self, parent, title=title, size=(200,100))\n",
+    "            self.control = wx.TextCtrl(self, style=wx.TE_MULTILINE)\n",
+    "            self.Show(True)\n",
+    "            \n",
+    "app = wx.App(False)\n",
+    "frame = MyFrame(None, 'Small editor')\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw editor.py"
    ]
   },
   {
