--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -39,7 +39,14 @@
     "    6. Classes\n",
     "    7. Modules\n",
     "    8. Try and Accept\n",
-    "    9. Plotting"
+    "    9. Plotting\n",
+    "  ### Lecture 6 — GUI Programming and Widgets\n",
+    "    1. Install wxpython\n",
+    "    2. Our first application: \"Hello, World\"\n",
+    "    3. A simple text editor\n",
+    "    4. Status bars & Menu bars\n",
+    "    5. Event Handling\n",
+    "    6. Buttons"
    ]
   },
   {
@@ -2382,6 +2389,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -3340,12 +3354,20 @@
     "collapsed": true
    },
    "source": [
-    "# Lecture 6 — Widgets\n",
+    "# Lecture 6 — GUI Programming and Widgets\n",
     "\n",
     "Todo\n",
     "1. Install wxpython\n",
     "2. Our first application: \"Hello, World\"\n",
-    "3. A simple text editor\n"
+    "3. A simple text editor\n",
+    "4. Status bars & Menu bars\n",
+    "5. Event Handling\n",
+    "6. Buttons\n",
+    "\n",
+    "\n",
+    "wxpython is basically just a python package that lets you make little windows and applications.\n",
+    "there are many other packages that do the same thing\n",
+    "Check them all out here! https://wiki.python.org/moin/GuiProgramming"
    ]
   },
   {
@@ -3424,19 +3446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing editor.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile editor.py\n",
     "#!/usr/bin/env pythonw\n",
@@ -3465,13 +3479,386 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Status bars & Menu bars"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MainWindow.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile MainWindow.py\n",
+    "#!/usr/bin/env pythonw\n",
+    "import wx\n",
+    "class MyFrame(wx.Frame):\n",
+    "        \"\"\"We simply derive a new class of frame\"\"\"\n",
+    "        def __init__(self, parent, title):\n",
+    "            wx.Frame.__init__(self, parent, title=title, size=(200,100))\n",
+    "            self.control = wx.TextCtrl(self, style=wx.TE_MULTILINE)\n",
+    "            self.CreateStatusBar() #A statusbar at the bottom of the window\n",
+    "            \n",
+    "            # setting up the menu.\n",
+    "            filemenu= wx.Menu()\n",
+    "            \n",
+    "            # wx.ID_ABOUT and wx.ID_EXIT are standard IDs provided by wxWidgets\n",
+    "            filemenu.Append(wx.ID_ABOUT, \"&About\",\" Information about this program\")\n",
+    "            filemenu.AppendSeparator()\n",
+    "            filemenu.Append(wx.ID_EDIT, \"&Exit\",\" Terminate the program\")\n",
+    "            \n",
+    "            # Creating the menubar\n",
+    "            menuBar = wx.MenuBar()\n",
+    "            menuBar.Append(filemenu, \"&File\") # adding the \"filename\" to the...\n",
+    "            self.SetMenuBar(menuBar) # Adding the MenuBar for the Frame content\n",
+    "            self.Show(True)\n",
+    "            \n",
+    "app = wx.App(False)\n",
+    "frame = MyFrame(None, 'Sample editor')\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw MainWindow.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 5. Event Handling\n",
+    "\n",
+    "- Reacting to evens in wxPython is called event handling.\n",
+    "- And event is when \"something happens in your application\n",
+    "  - eg button click, text input, mouse movement, etc)\n",
+    "  - Much of GUI programming consists of responding to events\n",
+    "  \n",
+    "Cope same code as  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MenuActions.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile MenuActions.py\n",
+    "#!/usr/bin/env pythonw\n",
+    "import wx\n",
+    "class MyFrame(wx.Frame):\n",
+    "        \"\"\"We simply derive a new class of frame\"\"\"\n",
+    "        def __init__(self, parent, title):\n",
+    "            wx.Frame.__init__(self, parent, title=title, size=(200,100))\n",
+    "            self.control = wx.TextCtrl(self, style=wx.TE_MULTILINE)\n",
+    "            self.CreateStatusBar() #A statusbar at the bottom of the window\n",
+    "            \n",
+    "            # setting up the menu.\n",
+    "            filemenu= wx.Menu()\n",
+    "            \n",
+    "            # wx.ID_ABOUT and wx.ID_EXIT are standard IDs provided by wxWidgets\n",
+    "            # give names to the following things\n",
+    "            menuAbout = filemenu.Append(wx.ID_ABOUT, \"&About\",\" Information about this program\")\n",
+    "            filemenu.AppendSeparator()\n",
+    "            menuExit = filemenu.Append(wx.ID_EDIT, \"&Exit\",\" Terminate the program\")\n",
+    "            \n",
+    "            # Creating the menubar\n",
+    "            menuBar = wx.MenuBar()\n",
+    "            menuBar.Append(filemenu, \"&File\") # adding the \"filename\" to the...\n",
+    "            self.SetMenuBar(menuBar) # Adding the MenuBar for the Frame content\n",
+    "            \n",
+    "            #New code beings here:\n",
+    "            #set events:\n",
+    "            self.Bind(wx.EVT_MENU, self.OnAbout, menuAbout)\n",
+    "            self.Bind(wx.EVT_MENU, self.OnExit, menuExit)\n",
+    "            self.Show(True)\n",
+    "            \n",
+    "        #add our new functions:\n",
+    "        \n",
+    "        def OnAbout(self,e):\n",
+    "            # A message dialog box with an OK button, wx.OK is a standard ID\n",
+    "            dlg = wx.MessageDialog( self, \"I'm sorry.  sorry.  let's get burritos\", \"Actually Dominic, I KNEW IT\", wx.OK)\n",
+    "            dlg.ShowModal() #show it\n",
+    "            dlg.Destroy() # destroy it when finished\n",
+    "        \n",
+    "        def OnExit(self,e):\n",
+    "            self.Close(True) # close the frame\n",
+    "            \n",
+    "app = wx.App(False)\n",
+    "frame = MyFrame(None, 'Sample editor')\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!pythonw MenuActions.py\n",
+    "\n",
+    "# Try going to the menu -> about\n",
+    "# Try going to file -> Quit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now add an open command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MenuActionsOpen.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile MenuActionsOpen.py\n",
+    "#!/usr/bin/env pythonw\n",
+    "import wx\n",
+    "import os\n",
+    "class MyFrame(wx.Frame):\n",
+    "        \"\"\"We simply derive a new class of frame\"\"\"\n",
+    "        def __init__(self, parent, title):\n",
+    "            wx.Frame.__init__(self, parent, title=title, size=(200,100))\n",
+    "            self.control = wx.TextCtrl(self, style=wx.TE_MULTILINE)\n",
+    "            self.CreateStatusBar() #A statusbar at the bottom of the window\n",
+    "            \n",
+    "            # setting up the menu.\n",
+    "            filemenu= wx.Menu()\n",
+    "            \n",
+    "            # wx.ID_ABOUT and wx.ID_EXIT are standard IDs provided by wxWidgets\n",
+    "            # give names to the following things\n",
+    "            menuOpen = filemenu.Append(wx.ID_OPEN, \"&Open\", \" Open text file\")  ###NEW\n",
+    "            menuAbout = filemenu.Append(wx.ID_ABOUT, \"&About\",\" Information about this program\")\n",
+    "            filemenu.AppendSeparator()\n",
+    "            menuExit = filemenu.Append(wx.ID_EDIT, \"&Exit\",\" Terminate the program\")\n",
+    "            \n",
+    "            # Creating the menubar\n",
+    "            menuBar = wx.MenuBar()\n",
+    "            menuBar.Append(filemenu, \"&File\") # adding the \"filename\" to the...\n",
+    "            self.SetMenuBar(menuBar) # Adding the MenuBar for the Frame content\n",
+    "            \n",
+    "            #New code beings here:\n",
+    "            #set events:\n",
+    "            self.Bind(wx.EVT_MENU, self.OnOpen, menuOpen)  ###New\n",
+    "            self.Bind(wx.EVT_MENU, self.OnAbout, menuAbout)\n",
+    "            self.Bind(wx.EVT_MENU, self.OnExit, menuExit)\n",
+    "            self.Show(True)\n",
+    "            \n",
+    "        #add our new functions:\n",
+    "        \n",
+    "        def OnAbout(self,e):\n",
+    "            # A message dialog box with an OK button, wx.OK is a standard ID\n",
+    "            dlg = wx.MessageDialog( self, \"I'm sorry.  sorry.  let's get burritos\", \"Actually Dominic, I KNEW IT\", wx.OK)\n",
+    "            dlg.ShowModal() #show it\n",
+    "            dlg.Destroy() # destroy it when finished\n",
+    "        \n",
+    "        def OnExit(self,e):\n",
+    "            self.Close(True) # close the frame\n",
+    "            \n",
+    "        def OnOpen(self,e):  ###NEW\n",
+    "            \"\"\"Open a file\"\"\"\n",
+    "            self.dirname = ''\n",
+    "            dlg = wx.FileDialog(self, \"Choose a file\", self.dirname, \"\", \"*.*\", wx.OPEN)\n",
+    "            if dlg.ShowModal() == wx.ID_OK:\n",
+    "                self.filename = dlg.GetFilename()\n",
+    "                self.dirname = dlg.GetDirectory()\n",
+    "                f = open(os.path.join(self.dirname, self.filename), 'r')\n",
+    "                self.control.SetValue(f.read())\n",
+    "                f.close()\n",
+    "            dlg.Destroy()\n",
+    "            \n",
+    "app = wx.App(False)\n",
+    "frame = MyFrame(None, 'Sample editor')\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw MenuActionsOpen.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "^ try adding a plain text file from the open menu!\n",
+    "cool!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Buttons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MenuButtons.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile MenuButtons.py\n",
+    "#!/usr/bin/env pythonw\n",
+    "import wx\n",
+    "import os\n",
+    "class MyFrame(wx.Frame):\n",
+    "        \"\"\"We simply derive a new class of frame\"\"\"\n",
+    "        def __init__(self, parent, title):\n",
+    "            wx.Frame.__init__(self, parent, title=title, size=(500,500))\n",
+    "            self.control = wx.TextCtrl(self, style=wx.TE_MULTILINE)\n",
+    "            self.CreateStatusBar() #A statusbar at the bottom of the window\n",
+    "            \n",
+    "            # setting up the menu.\n",
+    "            filemenu= wx.Menu()\n",
+    "            \n",
+    "            # wx.ID_ABOUT and wx.ID_EXIT are standard IDs provided by wxWidgets\n",
+    "            # give names to the following things\n",
+    "            menuOpen = filemenu.Append(wx.ID_OPEN, \"&Open\", \" Open text file\")\n",
+    "            menuAbout = filemenu.Append(wx.ID_ABOUT, \"&About\",\" Information about this program\")\n",
+    "            filemenu.AppendSeparator()\n",
+    "            menuExit = filemenu.Append(wx.ID_EDIT, \"&Exit\",\" Terminate the program\")\n",
+    "            \n",
+    "            # Creating the menubar\n",
+    "            menuBar = wx.MenuBar()\n",
+    "            menuBar.Append(filemenu, \"&File\") # adding the \"filename\" to the...\n",
+    "            self.SetMenuBar(menuBar) # Adding the MenuBar for the Frame content\n",
+    "        \n",
+    "            #set events:\n",
+    "            self.Bind(wx.EVT_MENU, self.OnOpen, menuOpen)\n",
+    "            self.Bind(wx.EVT_MENU, self.OnAbout, menuAbout)\n",
+    "            self.Bind(wx.EVT_MENU, self.OnExit, menuExit)\n",
+    "            \n",
+    "            # New code here:\n",
+    "            \n",
+    "            self.sizer2 = wx.BoxSizer(wx.HORIZONTAL) # stack the buttons in a horizontal way\n",
+    "            self.buttons = []\n",
+    "            for i in range(0,6):  # this command adds the buttons\n",
+    "                self.buttons.append(wx.Button(self, -1, \"Button &\"+str(i)))\n",
+    "                self.sizer2.Add(self.buttons[i], 1, wx.EXPAND) \n",
+    "            \n",
+    "            #use some sizers to see layout options\n",
+    "            self.sizer = wx.BoxSizer(wx.VERTICAL) # stack the text box and the button box vertically\n",
+    "            self.sizer.Add(self.control, 1, wx.EXPAND) # the text editor\n",
+    "            self.sizer.Add(self.sizer2, 0, wx.EXPAND) # the box where the buttons go\n",
+    "            \n",
+    "            #Layout sizers\n",
+    "            self.SetSizer(self.sizer)\n",
+    "            self.SetAutoLayout(1)\n",
+    "            self.sizer.Fit(self)\n",
+    "            self.Show(True)\n",
+    "        \n",
+    "        def OnAbout(self,e):\n",
+    "            # A message dialog box with an OK button, wx.OK is a standard ID\n",
+    "            dlg = wx.MessageDialog( self, \"I'm sorry.  sorry.  let's get burritos\", \"Actually Dominic, I KNEW IT\", wx.OK)\n",
+    "            dlg.ShowModal() #show it\n",
+    "            dlg.Destroy() # destroy it when finished\n",
+    "        \n",
+    "        def OnExit(self,e):\n",
+    "            self.Close(True) # close the frame\n",
+    "            \n",
+    "        def OnOpen(self,e):  ###NEW\n",
+    "            \"\"\"Open a file\"\"\"\n",
+    "            self.dirname = ''\n",
+    "            dlg = wx.FileDialog(self, \"Choose a file\", self.dirname, \"\", \"*.*\", wx.OPEN)\n",
+    "            if dlg.ShowModal() == wx.ID_OK:\n",
+    "                self.filename = dlg.GetFilename()\n",
+    "                self.dirname = dlg.GetDirectory()\n",
+    "                f = open(os.path.join(self.dirname, self.filename), 'r')\n",
+    "                self.control.SetValue(f.read())\n",
+    "                f.close()\n",
+    "            dlg.Destroy()\n",
+    "            \n",
+    "app = wx.App(False)\n",
+    "frame = MyFrame(None, 'Sample editor')\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw MenuButtons.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "^ try changing the HORIZONTALs to VERTICALs and seeing what happens :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------"
+   ]
   }
  ],
  "metadata": {
