--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3857,8 +3857,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "------"
+    "------\n",
+    "\n",
+    "# Lecture 7 — More Widgets\n",
+    "\n",
+    "Todo\n",
+    "1. \n",
+    "\n",
+    "## 1. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting example.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile example.py\n",
+    "import wx\n",
+    "import os\n",
+    "class ExamplePanel (wx.Panel):\n",
+    "    def __init__(self, parent):\n",
+    "        wx.Panel.__init__(self,parent)\n",
+    "        self.quote= wx.StaticText(self, label=\"Your Quote :\", pos=(20,30))\n",
+    "        self.logger = wx.TextCtrl(self, pos=(300,20), size=(200,300), style=wx.TE_MULTILINE | wx.TE_READONLY)\n",
+    "\n",
+    "        # A button\n",
+    "        self.button = wx.Button(self, label=\"Save\", pos=(200, 325))\n",
+    "        self.Bind(wx.EVT_BUTTON, self.OnClick,self.button)\n",
+    "\n",
+    "        # the edit control - one line version\n",
+    "        self.lblname = wx.StaticText(self, label=\"Your name :\", pos=(20,60))\n",
+    "        self.editname = wx.TextCtrl(self, value=\"Enter here your name\", pos=(150,160), size=(140,-1))\n",
+    "        self.Bind(wx.EVT_TEXT,self.EvtText,self.editname)\n",
+    "        self.Bind(wx.EVT_CHAR,self.EvtChar,self.editname)\n",
+    "\n",
+    "        # the combobox Control\n",
+    "        self.sampleList = ['friends', 'advertising', 'web search', 'Yellow Pages']\n",
+    "        self.lblhear = wx.StaticText(self, label=\"How did you hear from us?\", pos=(20,90))\n",
+    "        self.edithear = wx.ComboBox(self, pos=(150,90),size=(95,-1),choices=self.sampleList, style=wx.CB_DROPDOWN)\n",
+    "        self.Bind(wx.EVT_COMBOBOX,self.EvtComboBox,self.edithear)\n",
+    "        self.Bind(wx.EVT_TEXT,self.EvtText,self.edithear)\n",
+    "\n",
+    "        self.insure=wx.CheckBox(self,label=\"Do you want Insured Shipment?\", pos=(20,100))\n",
+    "        self.Bind(wx.EVT_CHECKBOX,self.EvtCheckBox,self.insure)\n",
+    "\n",
+    "        # Radio Boxes\n",
+    "        radioList = ['blue','red','yellow','orange','green','purple','navy blue','black','gray']\n",
+    "        rb = wx.RadioBox(self,label=\"What color whould you like?\", pos=(20,210), choices=radioList, majorDimension=3,style=wx.RA_SPECIFY_COLS)\n",
+    "        self.Bind(wx.EVT_RADIOBOX,self.EvtRadioBox,rb)\n",
+    "    \n",
+    "    def EvtRadioBox(self,event):\n",
+    "        self.logger.AppendText('EvtRadioBox: %d\\n' % event.GetInt())\n",
+    "    def EvtComboBox(self,event):\n",
+    "        self.logger.AppendText('EvtComboBox %s/n' % event.GetString())\n",
+    "    def OnClick(self,event):\n",
+    "        self.logger.AppendText('Click on an object with ID %d\\n' % event.GetId())\n",
+    "    def EvtText(self,event):\n",
+    "        self.logger.AppendText('EvtText: %s\\n' % event.GetString())\n",
+    "    def EvtChar(self,event):\n",
+    "        self.logger.AppendText('EvtChar: %d\\n' % event.GetKeyCode())\n",
+    "    def EvtCheckBox(self,event):\n",
+    "        self.logger.AppendText('EvtCheckBox: %d\\n' % event.Checked())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting control_demo.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile control_demo.py\n",
+    "import wx\n",
+    "from example import ExamplePanel\n",
+    "\n",
+    "app = wx.App(False)\n",
+    "frame = wx.Frame(None,size=(500,400))\n",
+    "panel = ExamplePanel(frame)\n",
+    "frame.Show()\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw control_demo.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
