Fixed spacing on shipment widget

--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3869,7 +3869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -3890,7 +3890,7 @@
     "    def __init__(self, parent):\n",
     "        wx.Panel.__init__(self,parent)\n",
     "        self.quote= wx.StaticText(self, label=\"Your Quote :\", pos=(20,30))\n",
-    "        self.logger = wx.TextCtrl(self, pos=(300,20), size=(200,300), style=wx.TE_MULTILINE | wx.TE_READONLY)\n",
+    "        self.logger = wx.TextCtrl(self, pos=(320,20), size=(200,300), style=wx.TE_MULTILINE | wx.TE_READONLY)\n",
     "\n",
     "        # A button\n",
     "        self.button = wx.Button(self, label=\"Save\", pos=(200, 325))\n",
@@ -3898,18 +3898,18 @@
     "\n",
     "        # the edit control - one line version\n",
     "        self.lblname = wx.StaticText(self, label=\"Your name :\", pos=(20,60))\n",
-    "        self.editname = wx.TextCtrl(self, value=\"Enter here your name\", pos=(150,160), size=(140,-1))\n",
+    "        self.editname = wx.TextCtrl(self, value=\"Enter here your name\", pos=(150,60), size=(140,-1))\n",
     "        self.Bind(wx.EVT_TEXT,self.EvtText,self.editname)\n",
     "        self.Bind(wx.EVT_CHAR,self.EvtChar,self.editname)\n",
     "\n",
     "        # the combobox Control\n",
     "        self.sampleList = ['friends', 'advertising', 'web search', 'Yellow Pages']\n",
     "        self.lblhear = wx.StaticText(self, label=\"How did you hear from us?\", pos=(20,90))\n",
-    "        self.edithear = wx.ComboBox(self, pos=(150,90),size=(95,-1),choices=self.sampleList, style=wx.CB_DROPDOWN)\n",
+    "        self.edithear = wx.ComboBox(self, pos=(197,88),size=(95,-1),choices=self.sampleList, style=wx.CB_DROPDOWN)\n",
     "        self.Bind(wx.EVT_COMBOBOX,self.EvtComboBox,self.edithear)\n",
     "        self.Bind(wx.EVT_TEXT,self.EvtText,self.edithear)\n",
     "\n",
-    "        self.insure=wx.CheckBox(self,label=\"Do you want Insured Shipment?\", pos=(20,100))\n",
+    "        self.insure=wx.CheckBox(self,label=\"Do you want Insured Shipment?\", pos=(20,180))\n",
     "        self.Bind(wx.EVT_CHECKBOX,self.EvtCheckBox,self.insure)\n",
     "\n",
     "        # Radio Boxes\n",
@@ -3933,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -3960,7 +3960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -3968,6 +3968,15 @@
    "source": [
     "!pythonw control_demo.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
