--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3864,7 +3864,8 @@
     "Todo\n",
     "1. \n",
     "\n",
-    "## 1. "
+    "\n",
+    "## 1. A multi-featured widget"
    ]
   },
   {
@@ -3933,7 +3934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -3952,7 +3953,7 @@
     "from example import ExamplePanel\n",
     "\n",
     "app = wx.App(False)\n",
-    "frame = wx.Frame(None,size=(500,400))\n",
+    "frame = wx.Frame(None,size=(550,400))\n",
     "panel = ExamplePanel(frame)\n",
     "frame.Show()\n",
     "app.MainLoop()"
@@ -3960,7 +3961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -3970,13 +3971,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Notebook Demo"
+   ]
   },
   {
    "cell_type": "code",
@@ -3985,7 +3984,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%writefile notebook_demo.py\n",
+    "import wx\n",
+    "from example import ExamplePanel\n",
+    "\n",
+    "app = wx.App(False)\n",
+    "frame = wx.Frame(None, title=\"Demo with Note\")"
+   ]
   }
  ],
  "metadata": {
